2011-01-18 Josh Kropf <josh@slashdev.ca>

    * ApplicationType.java (generate), CodSetType.java:
      applied patch from Derek Konigsberg which cleans up the output formatting
      of the ALX generator as well as adds a few new properties


2010-12-14 Josh Kropf <josh@slashdev.ca>

    * RapcTask.java (executeRapc): applied patch from Markus Winter that adds
      tools.jar to classpath to fix possible "CreateProcess error=87..." error


2010-12-07 Josh Kropf <josh@slashdev.ca>

    * JadtoolTask.java: new property (output); override output name of .jad file
    * SigtoolTask.java: new property (sigtooljar); set path to signature tool
      .jar file


2010-09-15 Josh Kropf <josh@slashdev.ca>

	* RapcTask.java (executeRapc): only copy JVM arguments that start with -X
	  when launching rapc; in rare instances Ant can be launched with args
	  that do NOT have properly escaped spaces and cause confusion when copying
	  these arguments.
	  (executeRapc): use all lower case for -noWarn switch
	  (executeRapc): removed extra separator in PREPROCESSOR line


2010-04-13 Josh Kropf <josh@slashdev.ca>

	* RapcTask.java (executeRapc): copy Ant's JVM arguments when launching rapc
	  compiler; fixes memory allocation issues when compiling large projects


2010-04-06 Josh Kropf <josh@slashdev.ca>

	* RapcTask.java (setJdkHome): bug fix - check 'jdkHome' for bin directory
	  not 'jdeHome' from the base class


2010-02-22 Josh Kropf <josh@slashdev.ca>

	* BaseJdpType.java (setIcon): check non-null AND non-empty string
	  (setFocusIcon): check non-null AND non-empty string
	  (setFile): use null as default for icon when properties file missing attribute


2010-02-16 Josh Kropf <josh@slashdev.ca>

	* BaseJdpType.java: new base class for JdpType and EntryPointType that
	  contains common properties shared by the two.
	* EntryPointType.java: now derived from BaseJdpType
	* JdpType: now derived from BaseJdpType
	  (writeManifest): output extra icons and focus icons to manifest file